--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-modal": "^3.15.1",
     "react-paginate": "^8.1.3",
     "react-router-dom": "^6.3.0",
+    "react-super-responsive-table": "^5.2.1",
     "yup": "^0.32.11"
   },
   "devDependencies": {
